# Winchess

./: .clang-format  .gitattributes  Board.cpp  Board.h  CMakeLists.txt  CMakeSettings.json  Converter.cpp  Converter.h  Evaluation.cpp  Evaluation.h  MoveGeneration.cpp  MoveGeneration.h  README.md  Search.cpp  Search.h  TDD.docx  UCI.cpp  UCI.cpp.orig  UCI.h  Winchess.cpp  Winchess.sln  Winchess.sln.DotSettings  Winchess.vcxproj  Winchess.vcxproj.filters
.github/workflows/: c-cpp.yml
ann/include/tensorflow/c/: c_api.h  tf_tensor.h
ann/model/: checkpoint  newnorm.ckpt.data-00000-of-00001  newnorm.ckpt.index  newnorm.pb
ann/tensorflow-c-library/windows/: tensorflow.lib
src/: Board.cpp  Board.h  Converter.cpp  Converter.h  Evaluation.cpp  Evaluation.h  FeatureGenerator.cpp  FeatureGenerator.h  Main.cpp  MaterialEvaluation.cpp  MaterialEvaluation.h  Model.cpp  Model.h  MoveGeneration.cpp  MoveGeneration.h  NeuralNetEvaluation.cpp  NeuralNetEvaluation.h  Search.cpp  Search.h  Tensor.cpp  Tensor.h  TranspositionTable.cpp  TranspositionTable.h  UCI.cpp  UCI.h  Util.cpp  Util.h
tests/: Perft.cpp  Perft.h  Winchess.Tests.cpp
